files/style.css
body {
  background-color: #222222;
  color: white;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 16px;
  text-shadow: 1px 1px 2px #111111;
  margin: 0px;
}

a {
  color: white;
}

div.debug {
  float: left;
  background-color: #333333;
  font-size: 14px;
  padding: 4px;
  margin: 2px;
  border: 1px solid #555555;
}
div.debug hr {
  border: 1px solid white;
}
div.debug pre {
  margin: 0px;
}

div#time {
  float: left;
  width: 236px;
  height: 211px;
  background-color: #4dbbb2;
  text-align: center;
  margin: 2px;
}
div#time span {
  display: inline-block;
  line-height: normal;
  vertical-align: middle;
}

div.widget {
  float: left;
  display: table;
  width: 236px;
  height: 211px;
  text-align: center;
  margin: 2px;
}
div.vertical-align {
  display: table-cell;
  vertical-align: middle;
}
div.widget.normal {
  background-color: #96bf48;
}
div.widget.warning {
  background-color: #eb9c3c;
}
div.widget.critical {
  background-color: #dc5945;
}
div.widget h2 {
  margin: 0px;
  margin-bottom: 10px;
}
div.widget table {
  table-layout: fixed;
  width: 100%;
}
td.left {
  font-size: 22px;
  font-weight: bold;
  text-align: right;
}
td.right {
  text-align: left;
}

div.iframe-container {
  float: left;
  width: 474px;
  height: 422px;
  background-color: #555555;
  padding: 1px;
  margin: 2px;
}
iframe.iframe-content {
  width: 100%;
  height: 100%;
  background-color: #333333;
  border: 0px;
}

